--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <body>
   <h1>Aidan Sims</h1>
+  <a href="AidanSimsResumeF.pdf">Resume</a>
+  <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
 </body>
 
