--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <a href="AidanSimsResumeF.pdf">Resume</a>
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
+  <select name="dropdown">
+    <option><a href="...">Link 1</a></option>
+    <option><a href="...">Link 2</a></option>
+    <option><a href="...">Link 3</a></option>
+  </select>
 </body>
 
 </html>
