--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
   <select name="dropdown">
-    <option><a href="...">Link 1</a></option>
-    <option><a href="...">Link 2</a></option>
-    <option><a href="...">Link 3</a></option>
+    <option><a href="https://www.espn.com/">Link 21</a></option>
+    <option><a href="https://www.espn.com/">Link 2</a></option>
+    <option><a href="https://www.espn.com/">Link 3</a></option>
   </select>
 </body>
 
