--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <body>
   <h1>Aidan Sims</h1>
+  <a href="https://www.espn.com/">Link 3</a>
   <a href="AidanSimsResumeF.pdf">Resume</a>
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
