--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 
 <body>
   <h1>Aidan Sims</h1>
-  <a href="https://www.espn.com/">Link 3</a>
+
   <a href="AidanSimsResumeF.pdf">Resume</a>
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
   <select name="dropdown">
-    <option><a href="https://www.espn.com/">Link 21</a></option>
-    <option><a href="https://www.espn.com/">Link 2</a></option>
-    <option><a href="https://www.espn.com/">Link 3</a></option>
+    <option>Link 1</option>
+    <option>Link 2</option>
+    <option>Link 3</option>
   </select>
+  <button id="go-button">Go</button>
 </body>
+<script src="index.js"></script>
 
 </html>
