--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <a href="AidanSimsResumeF.pdf">Resume</a>
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
-  <p>Welcome to my website!</p>
+  <p>Welcome to my website yo!</p>
   <select name="dropdown">
     <option>Link 1</option>
     <option>Link 2</option>
