--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
   <a href="AidanSimsResumeF.pdf">Resume</a>
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
-  <select name="dropdown">
-    <option>Link 1</option>
-    <option>Link 2</option>
-    <option>Link 3</option>
-  </select>
-  <button id="go-button">Go</button>
-</body>
-<script src="index.js"></script>
+
+  <div class="schedule item">
+    <div class="schedule_top">
+      <div class="item_date">
+        <time>
+          <span>Sat.</span>
+          <span>Sep 21</span>
+        </time>
+      </div>
+      <div class="item_body">
+        <div class="item_info">
+          <span class="prefix">vs.</span>
+          <div class="item_team">
+            <h3>Millburn</h3>
+            <p> Cortland, NY.</p>
+          </div>
+        </div>
+        <div class="item_inner">
+          <span class="item_result"> W, 4-1</span>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <script src="index.js"></script>
 
 </html>
