--- a/index.html
+++ b/index.html
@@ -11,27 +11,35 @@
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
 
-  <div class="schedule item">
-    <div class="schedule_top">
-      <div class="item_date">
-        <time>
-          <span>Sat.</span>
-          <span>Sep 21</span>
-        </time>
-      </div>
-      <div class="item_body">
-        <div class="item_info">
-          <span class="prefix">vs.</span>
-          <div class="item_team">
-            <h3>Millburn</h3>
-            <p> Cortland, NY.</p>
+  <div class="tournament" style="border: 2px solid rgb(23,24,45);">
+    <div class="t heading" style="background-color: rgb(23,24,45) ;">
+      <h3>USTA Eastern Sectional Tournament</h3>
+    </div>
+    <div class="schedule item">
+      <div class="schedule_top">
+        <div class="item_date">
+          <time>
+            <span>Sat.</span>
+            <span>Sep 21</span>
+          </time>
+        </div>
+        <div class="item_body">
+          <div class="item_info">
+            <span class="prefix">vs.</span>
+            <div class="item_team">
+              <h3>Millburn</h3>
+              <p> Cortland, NY.</p>
+            </div>
+          </div>
+          <div class="item_inner">
+            <span class="item_result"> W, 4-1</span>
           </div>
         </div>
-        <div class="item_inner">
-          <span class="item_result"> W, 4-1</span>
-        </div>
       </div>
-
+      <div class="item_bottom">
+        <span class="round">Final</span>
+        <span class="postgame">recap</span>
+      </div>
     </div>
   </div>
 
