--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
 
-  <div class="tournament" style="border: 2px solid rgb(23,24,45);">
-    <div class="t heading" style="background-color: rgb(23,24,45) ;">
+  <div class="tournament" style="border: 2px solid rgb(179,27,27);">
+    <div class="t heading" style="background-color: rgb(179,27,27) ;">
       <h3>USTA Eastern Sectional Tournament</h3>
     </div>
     <div class="schedule item">
@@ -43,6 +43,31 @@
     </div>
   </div>
 
+  <style>
+    .item_date {
+      font-family: Monda, sans-serif;
+      font-size: 12px;
+      color: #fff;
+      font-weight: 400;
+      line-height: 20px;
+      background-color: #b31b1b;
+      display: block;
+      padding: 5px 15px;
+      border-radius: 8px 8px 0 0;
+      text-transform: uppercase;
+    }
+
+    time,
+    span,
+    div {
+      margin: 0;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      font-family: inherit;
+      vertical-align: baseline;
+    }
+  </style>
   <script src="index.js"></script>
 
 </html>
