--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 
     .t_heading {
       margin-bottom: 10px;
-      color: var(--white);
+      color: #fff;
       padding: 10px 20px;
+      font-size: 20px;
     }
 
     .item_date {
@@ -137,7 +138,7 @@
       width: 100%;
       margin: 5px 0 10px;
       font-size: 15px;
-      color: var(--dark-color);
+      color: #b31b1b;
       text-transform: uppercase;
       font-weight: 600;
     }
