--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       padding: 5px 15px;
       border-radius: 8px 8px 0 0;
       text-transform: uppercase;
+      text-align: center;
     }
 
     .item_body {
