--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="item_date">
           <time>
             <span>Sat.</span>
-            <span>Sep 21</span>
+            <span>Sep 21, 2022</span>
           </time>
         </div>
         <div class="item_body">
