--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>Welcome to my website!</p>
 
   <div class="tournament" style="border: 2px solid rgb(179,27,27);">
-    <div class="t heading" style="background-color: rgb(179,27,27) ;">
+    <div class="t_heading" style="background-color: rgb(179,27,27) ;">
       <h3>USTA Eastern Sectional Tournament</h3>
     </div>
     <div class="schedule item">
