--- a/index.html
+++ b/index.html
@@ -73,20 +73,22 @@
       padding: 5px 15px;
       border-radius: 8px 8px 0 0;
       text-transform: uppercase;
-      text-align: center;
+      text-align: left;
     }
 
     .item_body {
       padding: 20px 15px;
-      background-color: #fff
+      background-color: #fff;
+      text-align: left;
     }
 
     .item_info {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       margin-bottom: 20px;
+      text-align: left;
     }
 
     .logo {
