--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="t_heading" style="background-color: rgb(179,27,27) ;">
       <h3>USTA Eastern Sectional Tournament</h3>
     </div>
-    <div class="schedule item">
+    <div class="schedule_item">
       <div class="schedule_top">
         <div class="item_date">
           <time>
@@ -60,6 +60,15 @@
       color: #fff;
       padding: 10px 20px;
       font-size: 20px;
+    }
+
+    .schedule_item {
+      margin-left: 7px;
+      margin-right: 7px;
+      margin-bottom: 20px;
+      text-align: left;
+      border-radius: 8px;
+      overflow: hidden;
     }
 
     .item_date {
