--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
       overflow: hidden;
     }
 
+    .schedule_top {
+      display: flex;
+      text-align: left;
+    }
+
     .item_date {
       font-family: Monda, sans-serif;
       font-size: 12px;
