--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
     .prefix {
       margin-right: 10px;
       margin-bottom: -4px;
+      font-family: Monda, sans-serif;
+      font-size: 12px;
+      color: #282c34;
+      font-weight: 400;
+      display: block;
+      text-transform: uppercase;
+      margin: 0 5px 0 0;
+      box-sizing: border-box;
+      text-align: left;
     }
 
     .item_team {
