--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
     .item_team {
       width: 100%;
       margin-top: 15px;
+      text-align: left;
+      box-sizing: border-box;
     }
 
     .item_inner {
