--- a/index.html
+++ b/index.html
@@ -137,14 +137,18 @@
 
     .item_inner {
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: reverse;
-      flex-direction: column-reverse;
+      box-sizing: border-box;
+      flex-direction: row;
+      -webkit-box-align: center;
+      text-align: left;
     }
 
     .item_result {
       display: block;
-      margin-bottom: 20px;
+      margin-bottom: 0;
+      font-weight: 700;
+      text-align: left;
+      box-sizing: border-box;
       font-size: 22px;
       font-weight: 700;
     }
