--- a/index.html
+++ b/index.html
@@ -155,24 +155,31 @@
 
     .item_bottom {
       background: #eee;
-      padding: 5px 15px;
-      border-radius: 0 0 8px 8px;
+      padding: 10px 30px;
       display: flex;
+      -webkit-box-pack: end;
+      justify-content: flex-end;
+      border-radius: 0;
       flex-wrap: wrap;
       -webkit-box-align: center;
       align-items: center;
-      -webkit-box-pack: center;
-      justify-content: center;
+      box-sizing: border-box;
+      text-align: left;
+      -webkit-box-direction: normal;
+
+
     }
 
+
     .round {
-      display: block;
-      width: 100%;
-      margin: 5px 0 10px;
-      font-size: 15px;
       color: #b31b1b;
+      margin-right: auto;
       text-transform: uppercase;
+      color: #00339f;
       font-weight: 600;
+      font-size: 12px;
+      text-align: left;
+      -webkit-box-direction: normal;
     }
 
 
