--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="prefix">vs.</span>
             <div class="item_team">
               <h3>Millburn</h3>
-              <p> Cortland, NY.</p>
+              <p> Cortland, sNY.</p>
             </div>
           </div>
           <div class="item_inner">
@@ -46,6 +46,10 @@
   <style>
     div {
       display: block;
+    }
+
+    body {
+      line-height: 1;
     }
 
     .tournament {
