--- a/index.html
+++ b/index.html
@@ -218,13 +218,33 @@
       vertical-align: baseline;
     }
 
-    h3 {
+    p {
+      font-family: Monda, sans-serif;
+      font-size: 14px;
+      color: #282c34;
+      font-weight: 400;
+      opacity: .7;
+      box-sizing: border-box;
       display: block;
       margin-block-start: 1em;
       margin-block-end: 1em;
       margin-inline-start: 0px;
       margin-inline-end: 0px;
+      text-align: left;
+    }
+
+    h3 {
+      margin-bottom: 5px;
+      font-weight: 700;
+      font-size: 18px;
+      display: block;
+      box-sizing: border-box;
+      margin-block-start: 1em;
+      margin-block-end: 1em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
       font-weight: bold;
+      text-align: left;
     }
   </style>
   <script src="index.js"></script>
