--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="prefix">vs.</span>
             <div class="item_team">
               <h3>Millburn</h3>
-              <p> Cortland, sNY.</p>
+              <p> Cortland, NY.</p>
             </div>
           </div>
           <div class="item_inner">
@@ -144,6 +144,7 @@
       margin: 0 5px 0 0;
       box-sizing: border-box;
       text-align: left;
+      -webkit-box-direction: normal;
     }
 
     .item_team {
