--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="prefix">vs.</span>
             <div class="item_team">
               <h3>Millburn</h3>
-              <p> Cortland, NY.</p>
+              <p> Cortland, nNY.</p>
             </div>
           </div>
           <div class="item_inner">
@@ -114,12 +114,17 @@
       -webkit-box-flex: 1;
       flex-grow: 1;
       margin-right: auto;
+      -webkit-box-pack: start;
       -webkit-box-align: center;
       box-sizing: border-box;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: flex-start;
+      color: #000;
+      font-weight: 400;
+      -webkit-box-direction: normal;
+
       text-align: left;
     }
 
@@ -151,7 +156,10 @@
       width: 100%;
       margin-top: 15px;
       text-align: left;
+      -webkit-box-direction: normal;
       box-sizing: border-box;
+      color: #000;
+      font-weight: 400;
     }
 
     .item_inner {
