--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="prefix">vs.</span>
             <div class="item_team">
               <h3>Millburn</h3>
-              <p> Cortland, nNY.</p>
+              <p> Cortland, NY.</p>
             </div>
           </div>
           <div class="item_inner">
@@ -120,7 +120,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: flex-end;
       color: #000;
       font-weight: 400;
       -webkit-box-direction: normal;
