--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="prefix">vs.</span>
             <div class="item_team">
               <h3>Millburn</h3>
-              <p> Cortland, NY.</p>
+              <p> Cortland, nNY.</p>
             </div>
           </div>
           <div class="item_inner">
@@ -117,10 +117,10 @@
       -webkit-box-pack: start;
       -webkit-box-align: center;
       box-sizing: border-box;
-      display: flex;
+      display: inline-block;
       flex-wrap: wrap;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: flex-start;
       color: #000;
       font-weight: 400;
       -webkit-box-direction: normal;
