--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>Welcome to my website!</p>
 
   <div class="tournament" style="border: 2px solid rgb(179,27,27);">
-    <div class="t_heading" style="background-color: rgb(179,27,27) ;">
+    <div class="t_heading" style="background-color: #073949 ;">
       <h3>USTA Eastern Sectional Tournament</h3>
     </div>
     <div class="schedule_item">
@@ -117,7 +117,7 @@
       -webkit-box-pack: start;
       -webkit-box-align: center;
       box-sizing: border-box;
-      display: inline-block;
+      display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: flex-start;
