--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <div class="item_info">
             <img src="cornell.png" alt="Cornell logo" class="logo" />
             <span class="prefix">vs.</span>
+            <img src="cornell.png" alt="Cornell logo" class="logo" />
             <div class="item_team">
               <h3>Millburn</h3>
               <p> Cortland, nNY.</p>
