--- a/index.html
+++ b/index.html
@@ -117,23 +117,22 @@
       flex-grow: 1;
       margin-right: auto;
       -webkit-box-pack: start;
+      justify-content: flex-start;
       -webkit-box-align: center;
       box-sizing: border-box;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      justify-content: flex-start;
       color: #000;
       font-weight: 400;
       -webkit-box-direction: normal;
-
       text-align: left;
     }
 
     .logo {
       display: block;
-      width: 50px;
-      height: 50px;
+      width: 70px;
+      height: 70px;
       min-width: 50px;
       object-fit: contain;
       margin: 0 10px 0 0;
@@ -170,6 +169,7 @@
       box-sizing: border-box;
       color: #000;
       font-weight: 400;
+      display: flex;
     }
 
     .item_inner {
