--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
     .logo {
       display: block;
-      width: 70px;
-      height: 70px;
+      width: 50px;
+      height: 50px;
       min-width: 50px;
       object-fit: contain;
       margin: 0 10px 0 0;
@@ -170,6 +170,7 @@
       color: #000;
       font-weight: 400;
       display: flex;
+      -webkit-box-orient: vertical;
     }
 
     .item_inner {
