--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
       box-sizing: border-box;
       color: #000;
       font-weight: 400;
-      display: block;
     }
 
     .item_inner {
@@ -245,6 +244,7 @@
       opacity: .7;
       box-sizing: border-box;
       display: block;
+      -webkit-box-direction: normal;
       margin-block-start: 1em;
       margin-block-end: 1em;
       margin-inline-start: 0px;
@@ -257,6 +257,7 @@
       font-weight: 700;
       font-size: 18px;
       display: block;
+      -webkit-box-direction: normal;
       box-sizing: border-box;
       margin-block-start: 1em;
       margin-block-end: 1em;
