--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="tournament" style="border: 2px solid rgb(179,27,27);">
     <div class="t_heading" style="background-color: #073949 ;">
-      <h3>USTA Eastern Sectional Tournament</h3>
+      <h3>USTA Eastsern Sectional Tournament</h3>
     </div>
     <div class="schedule_item">
       <div class="schedule_top">
