--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="cornell.png" alt="Cornell logo" class="logo" />
             <div class="item_team">
               <h3>Millburn</h3>
-              <p> Cortland, NY.</p>
+              <p> Cortland, nNY.</p>
             </div>
           </div>
           <div class="item_inner">
@@ -59,6 +59,7 @@
       padding-bottom: 10px;
       border-radius: 8px;
       overflow: hidden;
+      margin-right: auto;
     }
 
     .t_heading {
