--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <div class="item_date">
           <time>
             <span>Sat.</span>
-            <span>Sep 21, 2022</span>
+            <span>Sep 22, 2022</span>
           </time>
         </div>
         <div class="item_body">
-          <div class="item_info">
+          <div class="item_inner">
             <img src="cornell.png" alt="Cornell logo" class="logo" />
             <span class="prefix">vs.</span>
             <img src="cornell.png" alt="Cornell logo" class="logo" />
-            <div class="item_team">
+            <div class="item_inner">
               <h3>Millburn</h3>
               <p> Cortland, nNY.</p>
             </div>
