--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </time>
         </div>
         <div class="item_body">
-          <div class="item_inner">
+          <div class="item_info">
             <img src="cornell.png" alt="Cornell logo" class="logo" />
             <span class="prefix">vs.</span>
             <img src="cornell.png" alt="Cornell logo" class="logo" />
