--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="cornell.png" alt="Cornell logo" class="logo" />
             <div class="item_team">
               <h3>Millburn</h3>
-              <p> Cortland, NY.</p>
+              <p> Cortland, sNY.</p>
             </div>
           </div>
           <div class="item_inner">
