--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="cornell.png" alt="Cornell logo" class="logo" />
             <span class="prefix">vs.</span>
             <img src="cornell.png" alt="Cornell logo" class="logo" />
-            <div class="item_team">
+            <div class="item_inner">
               <h3>Millburn</h3>
               <p> Cortland, sNY.</p>
             </div>
