--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
         <span class="postgame">recap</span>
       </div>
     </div>
+
+    <div class="schedule_item">
+      <div class="schedule_top">
+        <div class="item_date">
+          <time>
+            <span>Sat.</span>
+            <span>Sep 22, 2022</span>
+          </time>
+        </div>
+        <div class="item_body">
+          <div class="item_info">
+            <img src="cornell.png" alt="Cornell logo" class="logo" />
+            <span class="prefix">vs.</span>
+            <img src="cornell.png" alt="Cornell logo" class="logo" />
+            <div class="item_inner">
+              <h3>Millburn</h3>
+              <p> Cortland, sNY.</p>
+            </div>
+          </div>
+          <div class="item_inner">
+            <span class="item_result"> W, 4-1</span>
+          </div>
+        </div>
+      </div>
+      <div class="item_bottom">
+        <span class="round">Final</span>
+        <span class="postgame">recap</span>
+      </div>
+    </div>
   </div>
 
   <style>
