--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="item_date">
           <time>
             <span>Sat.</span>
-            <span>Sep 22, 2022</span>
+            <span>Sep 22</span>
+            <span>2022</span>
           </time>
         </div>
         <div class="item_body">
@@ -119,11 +120,20 @@
       font-weight: 400;
       line-height: 20px;
       background-color: #b31b1b;
-      display: block;
+      display: flex;
       padding: 5px 15px;
       border-radius: 8px 8px 0 0;
       text-transform: uppercase;
       text-align: left;
+      -webkit-box-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      align-items: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      width: 100px;
+      border-radius: 0;
+      box-sizing: border-box;
     }
 
     .item_body {
