--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
 
-  <div class="tournament" style="border: 2px solid rgb(179,27,27);">
-    <div class="t_heading" style="background-color: #073949 ;">
+  <div class="tournament" style="border: 2px solid #222222;">
+    <div class="t_heading" style="background-color: #222222 ;">
       <h3>USTA Eastsern Sectional Tournament</h3>
     </div>
     <div class="schedule_item">
@@ -50,7 +50,7 @@
         <div class="item_date">
           <time>
             <span>Sat.</span>
-            <span>Sep 22, 2022</span>
+            <span>Sep 22</span>
           </time>
         </div>
         <div class="item_body">
