--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <span class="prefix">vs.</span>
             <img src="cornell.png" alt="Cornell logo" class="logo" />
             <div class="item_inner">
-              <h3>Millburn</h3>
-              <p> Cortland, sNY.</p>
+              <h3>Millburn </h3>
+              <p> Cortland, NY.</p>
             </div>
           </div>
           <div class="item_inner">
@@ -60,7 +60,7 @@
             <img src="cornell.png" alt="Cornell logo" class="logo" />
             <div class="item_inner">
               <h3>Millburn</h3>
-              <p> Cortland, sNY.</p>
+              <p> Cortland, NY.</p>
             </div>
           </div>
           <div class="item_inner">
