--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
 
-  <div class="tournament" style="border: 2px solid #222222;">
-    <div class="t_heading" style="background-color: #222222 ;">
+  <div class="tournament" style="border: 2px solid #5e3920;">
+    <div class="t_heading" style="background-color: #5e3920 ;">
       <h3>USTA Eastsern Sectional Tournament</h3>
     </div>
     <div class="schedule_item">
@@ -21,7 +21,6 @@
           <time>
             <span>Sat.</span>
             <span>Sep 22</span>
-            <span>2022</span>
           </time>
         </div>
         <div class="item_body">
@@ -289,6 +288,7 @@
       margin-block-end: 1em;
       margin-inline-start: 0px;
       margin-inline-end: 0px;
+      margin-left: 5em;
       text-align: left;
     }
 
