--- a/index.html
+++ b/index.html
@@ -11,30 +11,31 @@
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <p>Welcome to my website!</p>
 
-  <div class="tournament" style="border: 2px solid #5e3920;">
-    <div class="t_heading" style="background-color: #5e3920 ;">
-      <h3>USTA Eastsern Sectional Tournament</h3>
+  <div class="tournament" style="border: 2px solid #041e42;">
+    <div class="t_heading" style="background-color: #041e42 ;">
+      <h3>USTA Eastern Sectional Tournament</h3>
     </div>
     <div class="schedule_item">
       <div class="schedule_top">
         <div class="item_date">
           <time>
             <span>Sat.</span>
-            <span>Sep 22</span>
+            <span>Sep 17</span>
           </time>
         </div>
         <div class="item_body">
           <div class="item_info">
-            <img src="cornell.png" alt="Cornell logo" class="logo" />
+            <img src="https://github.com/simsaidan/CCT/blob/main/logo.png?raw=true" alt="Cornell logo" class="logo" />
             <span class="prefix">vs.</span>
-            <img src="cornell.png" alt="Cornell logo" class="logo" />
+            <img src="https://github.com/simsaidan/CCT/blob/main/rochester.png?raw=true" alt="Cornell logo"
+              class="logo" />
             <div class="item_inner">
-              <h3>Millburn </h3>
+              <h3>University of Rochester </h3>
               <p> Cortland, NY.</p>
             </div>
           </div>
           <div class="item_inner">
-            <span class="item_result"> W, 4-1</span>
+            <span class="item_result"> W, 30-4</span>
           </div>
         </div>
       </div>
@@ -49,21 +50,79 @@
         <div class="item_date">
           <time>
             <span>Sat.</span>
-            <span>Sep 22</span>
+            <span>Sep 17</span>
           </time>
         </div>
         <div class="item_body">
           <div class="item_info">
-            <img src="cornell.png" alt="Cornell logo" class="logo" />
+            <img src="https://github.com/simsaidan/CCT/blob/main/logo.png?raw=true" alt="Cornell logo" class="logo" />
             <span class="prefix">vs.</span>
-            <img src="cornell.png" alt="Cornell logo" class="logo" />
+            <img src="https://github.com/simsaidan/CCT/blob/main/colgate.png?raw=true" alt="Colgate" class="logo" />
             <div class="item_inner">
-              <h3>Millburn</h3>
+              <h3>Colgate</h3>
               <p> Cortland, NY.</p>
             </div>
           </div>
           <div class="item_inner">
-            <span class="item_result"> W, 4-1</span>
+            <span class="item_result"> W, 28-12</span>
+          </div>
+        </div>
+      </div>
+      <div class="item_bottom">
+        <span class="round">Group Stage</span>
+        <span class="postgame">recap</span>
+      </div>
+    </div>
+    <div class="schedule_item">
+      <div class="schedule_top">
+        <div class="item_date">
+          <time>
+            <span>Sat.</span>
+            <span>Sep 17</span>
+          </time>
+        </div>
+        <div class="item_body">
+          <div class="item_info">
+            <img src="https://github.com/simsaidan/CCT/blob/main/logo.png?raw=true" alt="Cornell logo" class="logo" />
+            <span class="prefix">vs.</span>
+            <img src="https://github.com/simsaidan/CCT/blob/main/rochester.png?raw=true" alt="Cornell logo"
+              class="logo" />
+            <div class="item_inner">
+              <h3>University of Rochester </h3>
+              <p> Cortland, NY.</p>
+            </div>
+          </div>
+          <div class="item_inner">
+            <span class="item_result"> W, 30-4</span>
+          </div>
+        </div>
+      </div>
+      <div class="item_bottom">
+        <span class="round">Final</span>
+        <span class="postgame">recap</span>
+      </div>
+    </div>
+    <div class="schedule_item">
+      <div class="schedule_top">
+        <div class="item_date">
+          <time>
+            <span>Sat.</span>
+            <span>Sep 17</span>
+          </time>
+        </div>
+        <div class="item_body">
+          <div class="item_info">
+            <img src="https://github.com/simsaidan/CCT/blob/main/logo.png?raw=true" alt="Cornell logo" class="logo" />
+            <span class="prefix">vs.</span>
+            <img src="https://github.com/simsaidan/CCT/blob/main/rochester.png?raw=true" alt="Cornell logo"
+              class="logo" />
+            <div class="item_inner">
+              <h3>University of Rochester </h3>
+              <p> Cortland, NY.</p>
+            </div>
+          </div>
+          <div class="item_inner">
+            <span class="item_result"> W, 30-4</span>
           </div>
         </div>
       </div>
