--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 
     .tournament {
       margin: 40px 0;
+      background-color: #d3d3d3;
       padding-bottom: 10px;
       border-radius: 8px;
       overflow: hidden;
