--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <a href="AidanSimsResumeF.pdf">Resume</a>
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
-  <p>Welcome to my website!</p>
+  <p>Welcome to my website!!</p>
 
   <div class="tournament" style="border: 2px solid #041e42;">
     <div class="t_heading" style="background-color: #041e42 ;">
@@ -41,7 +41,7 @@
       </div>
       <div class="item_bottom">
         <span class="round">Final</span>
-        <span class="postgame">recap</span>
+        <a class="postgame" href="https://www.instagram.com/p/Ci-7x5VgN-w/">Recap</a>
       </div>
     </div>
 
@@ -132,6 +132,48 @@
       </div>
     </div>
   </div>
+
+  <section class="stats">
+    <div class="container">
+      <div class="stats_row">
+        <div class="stats_item">
+          <span class="label">Overall</span>
+          <span class="value">6-0-1</span>
+        </div>
+        <div class="stats_item">
+          <span class="label">Overall</span>
+          <span class="value">6-0-1</span>
+        </div>
+        <div class="stats_item">
+          <span class="label">Overall</span>
+          <span class="value">6-0-1</span>
+        </div>
+        <div class="stats_item">
+          <span class="label">Overall</span>
+          <span class="value">6-0-1</span>
+
+        </div>
+        <div class="stats_item">
+          <span class="label">Overall</span>
+          <span class="value">6-0-1</span>
+        </div>
+        <div class="stats_item">
+          <span class="label">Overall</span>
+          <span class="value">6-0-1</span>
+        </div>
+        <div class="stats_item">
+          <span class="label">Overall</span>
+          <span class="value">6-0-1</span>
+        </div>
+        <div class="stats_item">
+          <span class="label">Overall</span>
+          <span class="value">6-0-1</span>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
 
   <style>
     div {
