--- a/index.html
+++ b/index.html
@@ -9,406 +9,10 @@
 
   <a href="AidanSimsResumeF.pdf">Resume</a>
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
+  <a href="webtapp.html">Tennis Match Stats</a>
   <p>Welcome to my website!!</p>
 
-  <div class="tournament" style="border: 2px solid #041e42;">
-    <div class="t_heading" style="background-color: #041e42 ;">
-      <h3>USTA Eastern Sectional Tournament</h3>
-    </div>
-    <div class="schedule_item">
-      <div class="schedule_top">
-        <div class="item_date">
-          <time>
-            <span>Sat.</span>
-            <span>Sep 17</span>
-          </time>
-        </div>
-        <div class="item_body">
-          <div class="item_info">
-            <img src="https://github.com/simsaidan/CCT/blob/main/logo.png?raw=true" alt="Cornell logo" class="logo" />
-            <span class="prefix">vs.</span>
-            <img src="https://github.com/simsaidan/CCT/blob/main/rochester.png?raw=true" alt="Cornell logo"
-              class="logo" />
-            <div class="item_inner">
-              <h3>University of Rochester </h3>
-              <p> Cortland, NY.</p>
-            </div>
-          </div>
-          <div class="item_inner">
-            <span class="item_result"> W, 30-4</span>
-          </div>
-        </div>
-      </div>
-      <div class="item_bottom">
-        <span class="round">Final</span>
-        <a class="postgame" href="https://www.instagram.com/p/Ci-7x5VgN-w/">Recap</a>
-      </div>
-    </div>
 
-    <div class="schedule_item">
-      <div class="schedule_top">
-        <div class="item_date">
-          <time>
-            <span>Sat.</span>
-            <span>Sep 17</span>
-          </time>
-        </div>
-        <div class="item_body">
-          <div class="item_info">
-            <img src="https://github.com/simsaidan/CCT/blob/main/logo.png?raw=true" alt="Cornell logo" class="logo" />
-            <span class="prefix">vs.</span>
-            <img src="https://github.com/simsaidan/CCT/blob/main/colgate.png?raw=true" alt="Colgate" class="logo" />
-            <div class="item_inner">
-              <h3>Colgate</h3>
-              <p> Cortland, NY.</p>
-            </div>
-          </div>
-          <div class="item_inner">
-            <span class="item_result"> W, 28-12</span>
-          </div>
-        </div>
-      </div>
-      <div class="item_bottom">
-        <span class="round">Group Stage</span>
-        <span class="postgame">recap</span>
-      </div>
-    </div>
-    <div class="schedule_item">
-      <div class="schedule_top">
-        <div class="item_date">
-          <time>
-            <span>Sat.</span>
-            <span>Sep 17</span>
-          </time>
-        </div>
-        <div class="item_body">
-          <div class="item_info">
-            <img src="https://github.com/simsaidan/CCT/blob/main/logo.png?raw=true" alt="Cornell logo" class="logo" />
-            <span class="prefix">vs.</span>
-            <img src="https://github.com/simsaidan/CCT/blob/main/rochester.png?raw=true" alt="Cornell logo"
-              class="logo" />
-            <div class="item_inner">
-              <h3>University of Rochester </h3>
-              <p> Cortland, NY.</p>
-            </div>
-          </div>
-          <div class="item_inner">
-            <span class="item_result"> W, 30-4</span>
-          </div>
-        </div>
-      </div>
-      <div class="item_bottom">
-        <span class="round">Final</span>
-        <span class="postgame">recap</span>
-      </div>
-    </div>
-    <div class="schedule_item">
-      <div class="schedule_top">
-        <div class="item_date">
-          <time>
-            <span>Sat.</span>
-            <span>Sep 17</span>
-          </time>
-        </div>
-        <div class="item_body">
-          <div class="item_info">
-            <img src="https://github.com/simsaidan/CCT/blob/main/logo.png?raw=true" alt="Cornell logo" class="logo" />
-            <span class="prefix">vs.</span>
-            <img src="https://github.com/simsaidan/CCT/blob/main/rochester.png?raw=true" alt="Cornell logo"
-              class="logo" />
-            <div class="item_inner">
-              <h3>University of Rochester </h3>
-              <p> Cortland, NY.</p>
-            </div>
-          </div>
-          <div class="item_inner">
-            <span class="item_result"> W, 30-4</span>
-          </div>
-        </div>
-      </div>
-      <div class="item_bottom">
-        <span class="round">Final</span>
-        <span class="postgame">recap</span>
-      </div>
-    </div>
-  </div>
-
-  <section class="stats">
-    <div class="container">
-      <div class="stats_row">
-        <div class="stats_item">
-          <span class="label">Overall</span>
-          <span class="value">6-0-1</span>
-        </div>
-        <div class="stats_item">
-          <span class="label">Overall</span>
-          <span class="value">6-0-1</span>
-        </div>
-        <div class="stats_item">
-          <span class="label">Overall</span>
-          <span class="value">6-0-1</span>
-        </div>
-        <div class="stats_item">
-          <span class="label">Overall</span>
-          <span class="value">6-0-1</span>
-
-        </div>
-        <div class="stats_item">
-          <span class="label">Overall</span>
-          <span class="value">6-0-1</span>
-        </div>
-        <div class="stats_item">
-          <span class="label">Overall</span>
-          <span class="value">6-0-1</span>
-        </div>
-        <div class="stats_item">
-          <span class="label">Overall</span>
-          <span class="value">6-0-1</span>
-        </div>
-        <div class="stats_item">
-          <span class="label">Overall</span>
-          <span class="value">6-0-1</span>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-
-  <style>
-    div {
-      display: block;
-    }
-
-    body {
-      line-height: 1;
-    }
-
-    .tournament {
-      margin: 40px 0;
-      background-color: #d3d3d3;
-      padding-bottom: 10px;
-      border-radius: 8px;
-      overflow: hidden;
-      margin-right: auto;
-    }
-
-    .t_heading {
-      margin-bottom: 10px;
-      color: #fff;
-      padding: 10px 20px;
-      font-size: 20px;
-    }
-
-    .schedule_item {
-      margin-left: 7px;
-      margin-right: 7px;
-      margin-bottom: 20px;
-      text-align: left;
-      border-radius: 8px;
-      overflow: hidden;
-    }
-
-    .schedule_top {
-      display: flex;
-      text-align: left;
-    }
-
-    .item_date {
-      font-family: Monda, sans-serif;
-      font-size: 12px;
-      color: #fff;
-      font-weight: 400;
-      line-height: 20px;
-      background-color: #b31b1b;
-      display: flex;
-      padding: 5px 15px;
-      border-radius: 8px 8px 0 0;
-      text-transform: uppercase;
-      text-align: left;
-      -webkit-box-pack: center;
-      justify-content: center;
-      -webkit-box-align: center;
-      align-items: center;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      width: 100px;
-      border-radius: 0;
-      box-sizing: border-box;
-    }
-
-    .item_body {
-      display: flex;
-      padding: 20px 15px;
-      background-color: #fff;
-      text-align: left;
-      -webkit-box-flex: 1;
-      flex-grow: 1;
-      border-radius: 0;
-      -webkit-box-align: center;
-      align-items: center;
-      box-sizing: border-box;
-      -webkit-box-direction: normal;
-    }
-
-    .item_info {
-      margin-bottom: 0;
-      min-width: 50%;
-      -webkit-box-flex: 1;
-      flex-grow: 1;
-      margin-right: auto;
-      -webkit-box-pack: start;
-      justify-content: flex-start;
-      -webkit-box-align: center;
-      box-sizing: border-box;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      color: #000;
-      font-weight: 400;
-      -webkit-box-direction: normal;
-      text-align: left;
-    }
-
-    .logo {
-      display: block;
-      width: 50px;
-      height: 50px;
-      min-width: 50px;
-      object-fit: contain;
-      margin: 0 10px 0 0;
-      box-sizing: border-box;
-      text-align: left;
-      -webkit-box-direction: normal;
-    }
-
-    img {
-      overflow-clip-margin: content-box;
-      overflow: clip;
-    }
-
-    .prefix {
-      margin-right: 10px;
-      margin-bottom: -4px;
-      font-family: Monda, sans-serif;
-      font-size: 12px;
-      color: #282c34;
-      font-weight: 400;
-      display: block;
-      text-transform: uppercase;
-      margin: 0 5px 0 0;
-      box-sizing: border-box;
-      text-align: left;
-      -webkit-box-direction: normal;
-    }
-
-    .item_team {
-      width: 100%;
-      margin-top: 15px;
-      text-align: left;
-      -webkit-box-direction: normal;
-      box-sizing: border-box;
-      color: #000;
-      font-weight: 400;
-    }
-
-    .item_inner {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      flex-direction: row;
-      -webkit-box-align: center;
-      align-items: center;
-      display: flex;
-      box-sizing: border-box;
-      text-align: left;
-    }
-
-    .item_result {
-      display: block;
-      margin-bottom: 0;
-      font-weight: 700;
-      text-align: left;
-      box-sizing: border-box;
-      font-size: 22px;
-      font-weight: 700;
-    }
-
-    .item_bottom {
-      background: #eee;
-      padding: 10px 30px;
-      display: flex;
-      -webkit-box-pack: end;
-      justify-content: flex-end;
-      border-radius: 0;
-      flex-wrap: wrap;
-      -webkit-box-align: center;
-      align-items: center;
-      box-sizing: border-box;
-      text-align: left;
-      -webkit-box-direction: normal;
-
-
-    }
-
-
-    .round {
-      color: #b31b1b;
-      margin-right: auto;
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 12px;
-      text-align: left;
-      -webkit-box-direction: normal;
-    }
-
-
-    a,
-    time,
-    span,
-    p,
-    div,
-    img,
-    h3 {
-      margin: 0;
-      padding: 0;
-      border: 0;
-      font-size: 100%;
-      font-family: inherit;
-      vertical-align: baseline;
-    }
-
-    p {
-      font-family: Monda, sans-serif;
-      font-size: 14px;
-      color: #282c34;
-      font-weight: 400;
-      opacity: .7;
-      box-sizing: border-box;
-      display: block;
-      -webkit-box-direction: normal;
-      margin-block-start: 1em;
-      margin-block-end: 1em;
-      margin-inline-start: 0px;
-      margin-inline-end: 0px;
-      margin-left: 2em;
-      text-align: left;
-    }
-
-    h3 {
-      margin-bottom: 5px;
-      font-weight: 700;
-      font-size: 18px;
-      display: block;
-      -webkit-box-direction: normal;
-      box-sizing: border-box;
-      margin-block-start: 1em;
-      margin-block-end: 1em;
-      margin-inline-start: 0px;
-      margin-inline-end: 0px;
-      font-weight: bold;
-      text-align: left;
-    }
-  </style>
   <script src="index.js"></script>
 
 </html>
