--- a/webtapp.html
+++ b/webtapp.html
@@ -1,11 +1,13 @@
-<html>
-
 <head>
-  <title>Welcome!</title>
+  <title>New Match</title>
+  <script></script>
 </head>
 
 <body>
-  <h1>Aidan Sims</h1>
+  <hr>
+  Point Adder
+  <hr>
+  Stats
 </body>
 
 </html>
