--- a/webtapp.html
+++ b/webtapp.html
@@ -1,9 +1,13 @@
 <head>
   <title>New Match</title>
-  <script></script>
+  <script>
+    const dateDiv = document.querySelector('.date');
+    dateDiv.textContent = new Date().toLocaleString();
+  </script>
 </head>
 
 <body>
+  <div class="date"> Date</div>
   <hr>
   Point Adder
   <hr>
