--- a/webtapp.html
+++ b/webtapp.html
@@ -1,17 +1,18 @@
 <head>
   <title>New Match</title>
-  <script>
-    const dateDiv = document.querySelector('.date');
-    dateDiv.textContent = new Date().toLocaleString();
-  </script>
 </head>
 
 <body>
   <div class="date"> Date</div>
+  <div class="server">Serving:</div>
   <hr>
   Point Adder
   <hr>
   Stats
+  <script>
+    const dateDiv = document.querySelector('.date');
+    dateDiv.textContent = new Date().toLocaleString();
+  </script>
 </body>
 
 </html>
