--- a/webtapp.html
+++ b/webtapp.html
@@ -6,7 +6,7 @@
   <div class="date"> Date</div>
   <div class="server">Serving:</div>
   <hr>
-  Point Adder
+  Point Adderr
   <hr>
   Stats
   <script>
