--- a/webtapp.html
+++ b/webtapp.html
@@ -3,8 +3,14 @@
 </head>
 
 <body>
+  <div class="score">Score</div>
+  <div class="Players">
+    <span class="PlayerA">Player A</span>
+    <span class="PlayerB">Player B</span>
+  </div>
   <div class="date"> Date</div>
   <div class="server">Serving:</div>
+  <progress value="0.5" max="1"></progress>
   <hr>
   Point Adderrr
   <hr>
