--- a/webtapp.html
+++ b/webtapp.html
@@ -1,5 +1,12 @@
 <head>
   <title>New Match</title>
+  <style>
+    div {
+      text-align: center;
+      margin: auto;
+      width: 500px;
+    }
+  </style>
 </head>
 
 <body>
