--- a/webtapp.html
+++ b/webtapp.html
@@ -19,9 +19,13 @@
   <div class="server">Serving:</div>
   <progress value="0.5" max="1"></progress>
   <hr>
-  Point Adderrr
+  <div class="pointq">Was the first serve in?</div>
+  <div class="pointq">Who won the point?</div>
+  <div class="pointq">How was the point won?</div>
   <hr>
-  Stats
+  <div>Stats</div>
+  <hr>
+  <div>Play-by-Play</div>
   <script>
     const dateDiv = document.querySelector('.date');
     dateDiv.textContent = dateDiv.textContent = new Intl.DateTimeFormat('en-US', {
