--- a/webtapp.html
+++ b/webtapp.html
@@ -22,6 +22,7 @@
   <div class="pointq">Was the first serve in?</div>
   <div class="pointq">Who won the point?</div>
   <div class="pointq">How was the point won?</div>
+  <button type="button" class="submitb">Submit Point</button>
   <hr>
   <div>Stats</div>
   <hr>
