--- a/webtapp.html
+++ b/webtapp.html
@@ -1,7 +1,9 @@
 <head>
   <title>New Match</title>
   <style>
-    div {
+    div,
+    button,
+    progress {
       text-align: center;
       margin: auto;
       width: 500px;
