--- a/webtapp.html
+++ b/webtapp.html
@@ -1,12 +1,15 @@
 <head>
   <title>New Match</title>
   <style>
-    div,
-    button,
-    progress {
+    div {
       text-align: center;
       margin: auto;
       width: 500px;
+    }
+
+    button,
+    progress {
+      margin: auto;
     }
   </style>
 </head>
@@ -26,7 +29,7 @@
   <div class="pointq">How was the point won?</div>
   <button type="button" class="submitb">Submit Point</button>
   <hr>
-  <div>Stats</div>
+  <div>Stat</div>
   <hr>
   <div>Play-by-Play</div>
   <script>
