--- a/webtapp.html
+++ b/webtapp.html
@@ -6,11 +6,6 @@
       margin: auto;
       width: 500px;
     }
-
-    button,
-    progress {
-      margin: auto;
-    }
   </style>
 </head>
 
@@ -27,9 +22,11 @@
   <div class="pointq">Was the first serve in?</div>
   <div class="pointq">Who won the point?</div>
   <div class="pointq">How was the point won?</div>
-  <button type="button" class="submitb">Submit Point</button>
+  <div class="button">
+    <button type="button" class="submitb">Submit Point</button>
+  </div>
   <hr>
-  <div>Stat</div>
+  <div>Stats</div>
   <hr>
   <div>Play-by-Play</div>
   <script>
