--- a/webtapp.html
+++ b/webtapp.html
@@ -17,9 +17,15 @@
   </div>
   <div class="date"> Date</div>
   <div class="server">Serving:</div>
-  <progress value="0.5" max="1"></progress>
+  <div class="progress">
+    <progress value="0.5" max="1"></progress>
+  </div>
   <hr>
   <div class="pointq">Was the first serve in?</div>
+  <div class="radio">
+    <input type="radio" name="serveIn" value="servein"> Yes
+    <input type="radio" name="serveIn" value="serveout"> No
+  </div>
   <div class="pointq">Who won the point?</div>
   <div class="pointq">How was the point won?</div>
   <div class="button">
