--- a/webtapp.html
+++ b/webtapp.html
@@ -51,7 +51,7 @@
     <button type="button" class="submitb" onclick="increment()">Submit Point</button>
   </div>
   <hr>
-  <div>Stats</div>
+  <div>Statss</div>
   <hr>
   <div>Play-by-Play</div>
   <script>
@@ -66,7 +66,7 @@
     }).format(new Date());
 
     function increment() {
-      var div = document.querySelector("score");
+      var div = document.querySelector(".score");
       var num = parseInt(div.textContent);
       num++;
       div.textContent = num;
