--- a/webtapp.html
+++ b/webtapp.html
@@ -51,7 +51,22 @@
     <button type="button" class="submitb" onclick="increment()">Submit Point</button>
   </div>
   <hr>
-  <div>Statss</div>
+  <div class="Players">
+    <span class="PlayerA">Player A</span>
+    <span class="PlayerB">Player B</span>
+  </div>
+  <div class="Ratings">
+    <span class="RatingA">Player A</span>
+    <span class="RatingB">Player B</span>
+  </div>
+  <div class="Button Menu">
+    <button type="button" class="bmenubutton">Overview</button>
+    <button type="button" class="bmenubutton">Serving</button>
+    <button type="button" class="bmenubutton">Returning</button>
+    <button type="button" class="bmenubutton">W/E & Net</button>
+    <button type="button" class="bmenubutton">Aces/DF</button>
+    <button type="button" class="bmenubutton">Total</button>
+  </div>
   <hr>
   <div>Play-by-Play</div>
   <script>
