--- a/webtapp.html
+++ b/webtapp.html
@@ -67,6 +67,7 @@
     <button type="button" class="bmenubutton">Aces/DF</button>
     <button type="button" class="bmenubutton">Total</button>
   </div>
+  <div>Bottom Text</div>
   <hr>
   <div>Play-by-Play</div>
   <script>
