--- a/webtapp.html
+++ b/webtapp.html
@@ -49,6 +49,7 @@
   </div>
   <div class="button">
     <button type="button" class="submitb" onclick="increment()">Submit Point</button>
+    <button type="button" class="resetb">Reset Match</button>
   </div>
   <hr>
   <div class="Players">
