--- a/webtapp.html
+++ b/webtapp.html
@@ -49,7 +49,7 @@
   </div>
   <div class="button">
     <button type="button" class="submitb" onclick="increment()">Submit Point</button>
-    <button type="button" class="resetb">Reset Match</button>
+    <button type="button" class="resetb" onclick="location.reload()">Reset Match</button>
   </div>
   <hr>
   <div class="Players">
